Fixed sign in box heading to wrap when screen size is small

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -9,7 +9,6 @@ body {
 h1.sign-in-title {
     margin: 25px;
     padding: 25px;
-    line-height: 1px;
     font-size: 45px;
     font-weight: 500;
     color: #ffffff;
